--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.5.1",
+    "dotenv": "^14.2.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.2",
     "solc": "^0.8.11",
